# sentinels

./: .gitignore  .pylintrc  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  main.yml  pypi-publish.yml
sentinels/: __init__.py  __version__.py
tests/: test__readme_doctest.py
