[metadata]
name = sentinels
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
summary = Various objects to denote special meanings in python
description-file =
    README.md
description-content-type = text/markdown
license = BSD
author = Rotem Yaari
author_email = vmalloc@gmail.com
url = https://github.com/vmalloc/sentinels

[extras]
testing =
    pytest
    pylint
    

[tool:pytest]
testpaths = tests
